Fixed spacing for viewing images.  Added website icon and title

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ main {
   height: 100%;
   position: fixed;
   background-color: #b5b4b0;
+
 }
 
 a {
@@ -519,6 +520,10 @@ nav .active p {
     justify-self: center;
     align-self: center;
     margin-top: 10%;
+  }
+  .portfolio .overlay img{
+    width: 70%;
+    height: auto;
   }
 }
 
